<resources>
    <string name="app_name">Petgram</string>
    <string name="email">Email</string>
    <string name="contrasena">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="registrarse">Registrarse</string>
    <string name="repetir_email">Repetir Email</string>
    <string name="repetir_contrasena">Repetir Contraseña</string>
    <string name="cancelar">Cancelar</string>
    <string name="cambiar">Cambiar</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="estado_o_biografia">Estado o biografía de tu perfil</string>
    <string name="tipo_de_animal">Tipo de animal</string>
    <string name="localidad">Localidad</string>
    <string name="saltar">Saltar</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="title_activity_prueba">prueba</string>
    <string name="guardar">Guardar</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="enviar_solicitud_amistad">Enviar solicitud de amistad</string>
    <string name="cancelar_solicitud_amistad">Cancelar solicitud de amistad</string>
    <string name="cancelar_amistad">Cancelar amistad</string>
    <string name="configuracion">Configuración</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="contrasena_actual">Contraseña actual</string>
    <string name="nueva_contrasnea">Nueva contraseña</string>
    <string name="repetir_nueva_contrasena">Repetir nueva contraseña</string>
    <string name="cambiar_email">Cambiar email</string>
    <string name="nuevo_email">Nuevo email</string>
    <string name="escribe_tu_mensaje">Escribe tu mensaje aquí&#8230;</string>
    <string name="subir">Subir</string>
    <string name="pie_foto">Esctibe aquí el pie de foto de tu publicacion&#8230;</string>
    <string name="comentarios">Comentarios</string>
    <string name="escribe_comentario">Escribe un comentario&#8230;</string>
    <string name="lugar_foto">Lugar de la forografía</string>
    <string name="buscar_usuarios">Buscar usuarios</string>
    <string name="solicitudes_amistad">Solicitudes amistad</string>
    <string name="lista_bloqueados">Lista de bloqueados</string>
    <string name="modificar">Modificar</string>

    <!-- Tipos de animales para un Spinner -->
    <string-array name="tipos_animales">
        <item>Escoge un tipo de mascota</item>
        <item>Agaporni</item>
        <item>Caballo</item>
        <item>Canario</item>
        <item>Cobaya</item>
        <item>Conejo</item>
        <item>Cotorra</item>
        <item>Erizo</item>
        <item>Gato</item>
        <item>Guacamayo</item>
        <item>Hurón</item>
        <item>Hámster</item>
        <item>Invertebrado</item>
        <item>Loro</item>
        <item>Ninfa</item>
        <item>Pato</item>
        <item>Periquito</item>
        <item>Perro</item>
        <item>Pez</item>
        <item>Pájaro</item>
        <item>Rana</item>
        <item>Ratón doméstico</item>
        <item>Sapo</item>
        <item>Serpiente</item>
        <item>Tortuga</item>
        <item>Otro</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
