<?xml version="1.0" encoding="utf-8"?>
<item xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:title="">


        <menu>
            <item
                android:id="@+id/cambiarEmailMenuItem"
                android:icon="@drawable/ic_email"
                android:title="@string/cambiar_email"
                android:visible="true" app:showAsAction="always" />

            <item
                android:id="@+id/cambiarContrasenaMenuItem"
                android:icon="@drawable/ic_padlock"
                android:title="@string/cambiar_contrasena"
                android:visible="true" app:showAsAction="always"/>


            <item
                android:id="@+id/bloqueadosMenuItem"
                android:icon="@drawable/ic_group"
                android:title="@string/lista_bloqueados"
                android:visible="true" app:showAsAction="always"/>

            <item
                android:id="@+id/cerrarSesionMenuItem"
                android:icon="@drawable/ic_log_out"
                android:title="@string/cerrar_sesion"
                android:visible="true" app:showAsAction="always"/>
        </menu>

</item>