<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CambiarEmailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/cambiarEmailToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="70dp"
            app:srcCompat="@drawable/ic_email" />

        <EditText
            android:id="@+id/emailEtCambiarEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nuevo_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/contrasenaEtCambiarEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/contrasena"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@drawable/boton_azul_claro"
            android:onClick="clickCambiar"
            android:text="@string/cambiar_email"
            android:textColor="#FFFFFF" />

    </LinearLayout>


</LinearLayout>