<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10sp"
    tools:context=".SubirPublicacionActivity">

    <ImageView
        android:id="@+id/fotoIvSubirPublicacion"
        android:layout_width="0dp"
        android:layout_height="300sp"
        app:layout_constraintBottom_toTopOf="@+id/subirBtnSubirPublicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_touch"
        tools:ignore="VectorDrawableCompat" />

    <EditText
        android:id="@+id/pieFotoEtSubirPublicacion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/pie_foto"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/subirBtnSubirPublicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lugarEtSubirPublicacion"
        app:layout_constraintVertical_bias="0.333" />

    <Button
        android:id="@+id/subirBtnSubirPublicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:background="@drawable/boton_azul_claro"
        android:text="@string/subir"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/lugarEtSubirPublicacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_location"
        android:drawablePadding="20sp"
        android:ems="10"
        android:hint="@string/lugar_foto"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/subirBtnSubirPublicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoIvSubirPublicacion"
        app:layout_constraintVertical_bias="0.032" />
</androidx.constraintlayout.widget.ConstraintLayout>