<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="5sp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/cambiarEmailOpcionMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingLeft="8sp"
            android:paddingTop="15sp"
            android:paddingBottom="15sp">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:src="@drawable/ic_email" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:paddingLeft="10sp"
                android:text="@string/cambiar_email"
                android:textSize="24sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="5sp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/cambiarContrasenaOpcionMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingLeft="8sp"
            android:paddingTop="15sp"
            android:paddingBottom="15sp">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:src="@drawable/ic_padlock" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:paddingLeft="10sp"
                android:text="@string/cambiar_contrasena"
                android:textSize="24sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="5sp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/listaBloqueadosOpcionMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingLeft="8sp"
            android:paddingTop="15sp"
            android:paddingBottom="15sp">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:src="@drawable/ic_group" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:paddingLeft="10sp"
                android:text="@string/lista_bloqueados"
                android:textSize="24sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="5sp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/cerrarSesionOpcionMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingLeft="8sp"
            android:paddingTop="15sp"
            android:paddingBottom="15sp">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:src="@drawable/ic_log_out" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:paddingLeft="10sp"
                android:text="@string/cerrar_sesion"
                android:textSize="24sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>